objects/Deal_Change__c.object
<CustomObject>
    <description>Any Deal Change associated to Deal State</description>
    <fields>
        <fullName>ASP_Buy_Out_Cat_34174_36__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASP Buy-Out Cat # 34174-36</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASP_Buy_Out_Price__c</fullName>
        <label>ASP Buy-Out Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASP_Buy_Out_Quote__c</fullName>
        <label>ASP Buy-Out Quote #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Deal_State__r.Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDK_Opportunity_Owner__c</fullName>
        <formula>Deal_State__r.Opportunity__r.ADP_Opportunity_Owner__r.FirstName&amp;&quot; &quot;&amp;Deal_State__r.Opportunity__r.ADP_Opportunity_Owner__r.LastName</formula>
        <label>CDK Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Needed_By_Date__c</fullName>
        <label>Contract Needed By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deal_State__c</fullName>
        <label>Deal State</label>
        <referenceTo>Deal_State__c</referenceTo>
        <relationshipLabel>Deal Change</relationshipLabel>
        <relationshipName>Deal_Change</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hole_in_Firewall_No_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hole in Firewall No Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hole_in_Firewall_use_Cat_34122_98__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hole in Firewall use Cat # 34122-98</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Rep__c</fullName>
        <formula>Deal_State__r.Opportunity__r.Account.Key_Rep__r.FirstName&amp;&quot; &quot;&amp;Deal_State__r.Opportunity__r.Account.Key_Rep__r.LastName</formula>
        <label>Key Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Needed__c</fullName>
        <label>Network Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Network_Quotes_Attached__c</fullName>
        <description>Number of Network Quotes Attached for an opportunity.</description>
        <inlineHelpText>Number of Network Quotes Attached for an opportunity.</inlineHelpText>
        <label># of Network Quotes Attached</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Quotes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Quotes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_Behalf_Of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Entered on behalf of a user</inlineHelpText>
        <label>On Behalf Of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Change</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Deal_State__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Highway_Routing__c</fullName>
        <description>Changing the field type as mentioned in RQ-04125</description>
        <label>Project Highway Routing</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PSE Lane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCS Lane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Changes__c</fullName>
        <label>Reason for Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Changes__c</fullName>
        <label>Requested Changes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rush_Reasons__c</fullName>
        <label>Rush Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Client Needs ASAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installers On Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per VP/RGM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client is Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rush__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rush</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQT_Deal_ID__c</fullName>
        <formula>hyperlink(&quot;http://&quot; &amp; $Setup.CustomSettings__c.SQTServer__c &amp; &quot;Home.aspx?DealID=&quot; &amp; Deal_State__r.SQT_Deal_ID__c &amp; &quot;&amp;UID=&quot; &amp; $User.Id, Deal_State__r.SQT_Deal_ID__c,&quot;_blank&quot;)</formula>
        <label>SQT Deal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Solutions_Manager__c</fullName>
        <formula>Deal_State__r.Opportunity__r.Account.Technology_Solutions_Manager__r.FirstName&amp;&quot; &quot; &amp;Deal_State__r.Opportunity__r.Account.Technology_Solutions_Manager__r.LastName</formula>
        <label>Technology Solutions Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Change__c</fullName>
        <label>Type of Change</label>
        <picklist>
            <picklistValues>
                <fullName>SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Request-Changes Needed to SQT Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Quote Uploaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Request-Contracts Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deal Change</label>
    <nameField>
        <displayFormat>DC-{000000}</displayFormat>
        <label>Deal Change ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Change</pluralLabel>
    <recordTypes>
        <fullName>BDC</fullName>
        <active>true</active>
        <label>BDC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Network_Quote_Uploaded</fullName>
        <active>true</active>
        <label>Network Quote Uploaded</label>
    </recordTypes>
    <recordTypes>
        <fullName>SOW</fullName>
        <active>true</active>
        <label>SOW</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Request</fullName>
        <active>true</active>
        <label>Sales Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DS_BDC_ContractNeededByDate</fullName>
        <active>true</active>
        <description>Created to verify Contract Needed By Date greater then or equal to current date</description>
        <errorConditionFormula>AND(OR(ISNEW() &amp;&amp; Contract_Needed_By_Date__c &lt; Today(),ISCHANGED(Contract_Needed_By_Date__c) &amp;&amp; Contract_Needed_By_Date__c &lt; Today()),NOT(BEGINS($User.Username,$Setup.GlobalSettings__c.Admin_Integration_Username__c)))</errorConditionFormula>
        <errorDisplayField>Contract_Needed_By_Date__c</errorDisplayField>
        <errorMessage>Contract Needed By Date should be greater then or equal to today&apos;s date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_Fields_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(AND(NOT(ISCHANGED(Change_Completed__c)),Change_Completed__c= TRUE) || AND(NOT(ISCHANGED(Cancelled__c)), Cancelled__c=TRUE), 
OR( 
ISCHANGED(Notes__c), 
ISCHANGED(On_Behalf_Of__c), 
ISCHANGED(Reason_for_Changes__c), 
ISCHANGED(Requested_Changes__c), 
ISCHANGED(Rush__c), 
ISCHANGED(Type_of_Change__c),
ISCHANGED(Network_Needed__c) 
))</errorConditionFormula>
        <errorMessage>You can not modify completed or cancelled deal change. Please create a new deal change request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_ReasonforChanges_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Type_of_Change__c,&quot;Sales Request-Changes Needed to SQT Deal&quot;),ISPICKVAL(Type_of_Change__c,&quot;Sales Request-Contracts Needed&quot;)),ISBLANK(Reason_for_Changes__c))</errorConditionFormula>
        <errorDisplayField>Reason_for_Changes__c</errorDisplayField>
        <errorMessage>Please enter value for Reason for Changes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_Rush_Reason_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Rush__c = TRUE, 
ISBLANK(TEXT(Rush_Reasons__c))
)</errorConditionFormula>
        <errorDisplayField>Rush_Reasons__c</errorDisplayField>
        <errorMessage>Please Provide a Reason for Rush</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_Rush_Req</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
Rush__c = False, 
NOT(ISBLANK(TEXT(Rush_Reasons__c)))
)</errorConditionFormula>
        <errorDisplayField>Rush__c</errorDisplayField>
        <errorMessage>Please select Rush as Rush Reason is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DS_BDC_Type_Of_Change_Read_Only</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS($Profile.Name,&quot;Sales&quot;),
ISCHANGED(Type_of_Change__c)
)</errorConditionFormula>
        <errorDisplayField>Type_of_Change__c</errorDisplayField>
        <errorMessage>You can not edit Type of Change Field</errorMessage>
    </validationRules>
</CustomObject>